2005-07-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/_algo.c: Fix search_n implementation for random access
	iterator thanks Jim Xochellis

	* test/unit/algo_test.cpp: Add test case for the previous bug thanks
	Michael Fink.

	* src/num_get_float.cpp: Fix gcc Mingwin and Cygwin special version with
	building with -O2 option.

	* build/Makefiles/gmake/gcc.mak: Add -D_REENTRANT definition for cygwin and
	-mthreads for mingwin platform to make STLport thread safe like under the
	other supported platforms.


2005-06-30  Petr Ovtchenkov  <ptr@island...>

	* stlport/wchar.h, src/c_locale.c, stlport/stl/_threads.h: fix Netware
	wcs... functions.

2005-06-30  Francois Dumont  <dums@stlport...>

	* stlport/stl/_rope.h, _rope.c: Duplicate basic_string::npos definition code
	in rope implementation to use a "Standard" static const npos definition when
	possible depending on the compiler features. Thanks caldwed report.

2005-06-30  Michael Fink  <vividos@users.sourceforge...>

	* stlport/cstdlib, stdlib.h: Fixed issue with including stdlib.h after
	setjmp.h; fix from 2005-06-23 wasn't solving the problem.

2005-06-28  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hash_func.h: For MSVC .Net compiler we grant the hash<size_t>
	specialization rather than the hash<unsigned int> one to avoid 64 bits
	warnings when instanciating a hashed container with the size_t key.

	* stlport/stl/_istream_iterator.h: Modify istream_iterator implementation
	to avoid the default read from the istream even if the istream_iterator
	instance is not used.

	* test/unit/istmit_test.cpp: Add many tests for the copy_n/istream_iterator
	combination. Those tests are no active for the moment as they are failing,
	will be fixed after 5.0 release.

	* build/test/unit/nmake-vc-common.mak: Tests are no more built with the
	_STLP_NO_CUSTOM_IO option, see reason below.

	* test/unit/fstream_test.cpp: Add custom_facet test to check that STLport